--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,17 @@
 @import './pokedex.css';
 @import './cover.css';
+@import './header.css';
 
 :root {
     --white: #fffffe;
     --black: #300f16;
     --primary: #dc0a2d;
+    --primary2: #C70424;
     --secondary: #163355;
+    --light1: #4BA3DA;
+    --light2: #5BAA67;
+    --light3: #F4647D;
+    --light4: #FEEF8D;
     --body1: 400 0.75rem/1.5rem Roboto;
     --body3: 400 0.5rem/0.4556451737880707rem Roboto;
     --body2-regular: 400 0.75rem/1.375rem Space Mono;
