--- a/css/cover.css
+++ b/css/cover.css
@@ -1,34 +1,48 @@
-.cover{
-
-
-}
-
-.cover-front{
+.cover-front {
     inline-size: inherit;
     block-size: inherit;
-    background-color:var(--primary);   
+    background-color: var(--primary);
+    border-inline-end: 0.25rem solid var(--bordercover);
+    border-end-start-radius: 0.5rem;
+    clip-path: polygon(0 4.75rem, 70% 3.25rem, 100% 3.25rem, 100% 100%, 0 100%);
+    box-sizing: border-box;
+    
     position: absolute;
     inset: 0;
     z-index: 2;
 
-    transition: 2.5s transform;
+    transition: 1s transform;
     transform-origin: right center;
     backface-visibility: hidden;
+
+    padding: 1.5rem;
+    padding-block-start: 5.25rem;
 }
 
-.cover-back{
+.cover-back {
     inline-size: inherit;
     block-size: inherit;
-    background-color: aqua;    
+    background-color: var(--primary);
     position: absolute;
     inset: 0;
     z-index: 1;
 
     inset-inline-start: 100%;
     backface-visibility: hidden;
-    
-    transition: 2.5s transform;
-    transform-origin: left center;
+
     transform: rotatey(-180deg);
+    transition: 1s transform;
+    transform-origin: left center;
+
+    border-inline-start: 0.25rem solid var(--bordercover);
+    border-end-end-radius: 0.5rem;
+
+    box-sizing: border-box;
+    clip-path: polygon(0 3.25rem, 30% 3.25rem, 100% 4.75rem, 100% 100%, 0 100%);
+
+    padding: 1.5rem;
+    padding-block-start: 6.25rem;
+
+    display: flex;
 
 }
