--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -4,7 +4,6 @@
     inline-size: 100%;
     outline: none;
     position: relative;
-
     perspective: 1000px;
 }
 
@@ -13,7 +12,7 @@
 }
 
 .pokedex:is(:hover, :focus, :focus-within, .is-open) .cover-back{
-    transform: rotateY(0);
+    transform: rotateY(0deg);
 }
 
 .pokedex-main{
