--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@
     --light2: #5BAA67;
     --light3: #F4647D;
     --light4: #FEEF8D;
+    --screencolor: #8DB9DC;
     --body1: 400 0.75rem/1.5rem Roboto;
     --body3: 400 0.5rem/0.4556451737880707rem Roboto;
     --body2-regular: 400 0.75rem/1.375rem Space Mono;
