--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,7 @@
 .frame {
     background-color: var(--white);
     padding: 1.5rem;
-    padding-block-end: 2.75rem;
+    padding-block-end: 0rem;
     border-radius: 0.5rem;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 2rem 100%, 0 calc(100% - 2.75rem));
 }
@@ -19,4 +19,36 @@
     box-sizing: border-box;
 
     background-size: cover;
+}
+
+.detail {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    color: #8DB9DC;
+    align-items: stretch;
+}
+
+.buttons {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 1rem;
+
+}
+
+.button {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 100%;
+    background-color: var(--primary);
+}
+
+.btn_screen {
+    width: 1.57rem;
+    height: 0.875rem;
+    padding: 1rem;
+    padding-inline-start: 7.125rem;
+    padding-inline-end: 0;
 }
