--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,12 @@
 @import './light.css';
 @import './stats.css';
 @import './screen.css';
+@import './actions.css';
+@import './variants.css';
+@import './search.css';
+@import './description.css';
+@import './navigation.css';
+
 
 :root {
     --white: #fffffe;
@@ -17,6 +23,7 @@
     --light3: #F4647D;
     --light4: #FEEF8D;
     --screencolor: #8DB9DC;
+    --description:#51AE5F;
     --body1: 400 0.75rem/1.5rem Roboto;
     --body3: 400 0.5rem/0.4556451737880707rem Roboto;
     --body2-regular: 400 0.75rem/1.375rem Space Mono;
