--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,8 @@
     --light4: #FEEF8D;
     --screencolor: #8DB9DC;
     --description:#51AE5F;
+    --btnB1:#FECB2F;
+    --btnB2:#D2AB33;
     --body1: 400 0.75rem/1.5rem Roboto;
     --body3: 400 0.5rem/0.4556451737880707rem Roboto;
     --body2-regular: 400 0.75rem/1.375rem Space Mono;
