--- a/css/search.css
+++ b/css/search.css
@@ -1,9 +1,9 @@
 .search{
     grid-area: search;
-    inset: inherit;
-    block-size: inherit;
     display: flex;
-    
+    place-items: center;
+    margin: auto 0;
+
 }
 
 .search input{
@@ -16,6 +16,10 @@
     outline: none;
     box-sizing: border-box;
     margin: 0;
+
+    flex-wrap: wrap;
+    flex-direction: column; 
+    align-items: center;
 }
 
 .search input:focus{
