--- a/css/search.css
+++ b/css/search.css
@@ -5,23 +5,42 @@
     margin: auto 0;
 
 }
-
 .search input{
     padding: 0.5rem;
     border-radius: 0.5rem;
     border: none;
     font: var(--body1);
-    font-size: 1rem;
-    flex-grow: 1;
+    font-size: 0.8rem;
     outline: none;
     box-sizing: border-box;
     margin: 0;
 
+    flex-grow: 1;
     flex-wrap: wrap;
     flex-direction: column; 
     align-items: center;
 }
 
+.search #number{
+    inline-size: 2rem;
+    margin-right: 0.25rem;
+}
+
+.search #name{
+}
+
 .search input:focus{
     box-shadow: inset 0 0 0 1px var(--secondary);
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
