--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -2,6 +2,7 @@
     block-size: 38rem;
     max-inline-size: 24rem;
     inline-size: 100%;
+    box-sizing: border-box;
     outline: none;
     position: relative;
     perspective: 1000px;
