--- a/css/search.css
+++ b/css/search.css
@@ -1,46 +1,49 @@
-.search{
+.search {
     grid-area: search;
+    block-size: 2.5rem;
+    inline-size: inherit;
+    box-sizing: border-box;
     display: flex;
-    place-items: center;
-    margin: auto 0;
-
 }
-.search input{
-    padding: 0.5rem;
+
+.search input {
+    block-size: 2.5rem;
     border-radius: 0.5rem;
     border: none;
     font: var(--body1);
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     outline: none;
     box-sizing: border-box;
     margin: 0;
 
-    flex-grow: 1;
-    flex-wrap: wrap;
-    flex-direction: column; 
-    align-items: center;
 }
 
-.search #number{
-    inline-size: 2rem;
+.search #number {
+    inline-size: 3rem;
     margin-right: 0.25rem;
+    text-align: center;
 }
 
-.search #name{
+.search #form2 {
+    inline-size: 100%;
 }
 
-.search input:focus{
+.search #name {
+    inline-size: 100%;
+}
+
+.search input:focus {
     box-shadow: inset 0 0 0 1px var(--secondary);
 }
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Firefox */
 input[type=number] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
