--- a/css/index.css
+++ b/css/index.css
@@ -42,5 +42,23 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow-y: hidden;
+    
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+input {
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -o-user-select: text;
+    user-select: text;
 }
