--- a/css/stats.css
+++ b/css/stats.css
@@ -1,6 +1,9 @@
-.stats{
+.stats {
     background-color: var(--secondary);
     padding: 1rem;
     border-radius: 0.5rem;
     flex-grow: 1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
 }
