--- a/css/variants.css
+++ b/css/variants.css
@@ -28,8 +28,8 @@
     box-sizing: border-box;
     padding: 1rem;
     background-color: var(--white); /* defines the background color of the image */
-    mask: url('/images/random.svg') no-repeat center / contain;
-    -webkit-mask: url('/images/random.svg') no-repeat center / contain;
+    mask: url('./images/random.svg') no-repeat center / contain;
+    -webkit-mask: url('./images/random.svg') no-repeat center / contain;
     
 }
 
