--- a/css/cover.css
+++ b/css/cover.css
@@ -2,9 +2,11 @@
     inline-size: inherit;
     block-size: inherit;
     background-color: var(--primary);
-    border-inline-end: 0.25rem solid var(--bordercover);
+    -webkit-border-end: 0.25rem solid var(--bordercover);
+            border-inline-end: 0.25rem solid var(--bordercover);
     border-end-start-radius: 0.5rem;
-    clip-path: polygon(0 4.75rem, 70% 3.25rem, 100% 3.25rem, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(0 4.75rem, 70% 3.25rem, 100% 3.25rem, 100% 100%, 0 100%);
+            clip-path: polygon(0 4.75rem, 70% 3.25rem, 100% 3.25rem, 100% 100%, 0 100%);
     box-sizing: border-box;
     
     position: absolute;
@@ -13,10 +15,12 @@
 
     transition: 1s transform;
     transform-origin: right center;
-    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
 
     padding: 1.5rem;
-    padding-block-start: 5.25rem;
+    -webkit-padding-before: 5.25rem;
+            padding-block-start: 5.25rem;
 }
 
 .cover-back {
@@ -28,20 +32,25 @@
     z-index: 1;
 
     inset-inline-start: 100%;
-    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
 
     transform: rotatey(-180deg);
     transition: 1s transform;
     transform-origin: left center;
 
-    border-inline-start: 0.25rem solid var(--bordercover);
+    -webkit-border-start: 0.25rem solid var(--bordercover);
+
+            border-inline-start: 0.25rem solid var(--bordercover);
     border-end-end-radius: 0.5rem;
 
     box-sizing: border-box;
-    clip-path: polygon(0 3.25rem, 30% 3.25rem, 100% 4.75rem, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(0 3.25rem, 30% 3.25rem, 100% 4.75rem, 100% 100%, 0 100%);
+            clip-path: polygon(0 3.25rem, 30% 3.25rem, 100% 4.75rem, 100% 100%, 0 100%);
 
     padding: 1.5rem;
-    padding-block-start: 6.25rem;
+    -webkit-padding-before: 6.25rem;
+            padding-block-start: 6.25rem;
 
     display: flex;
 
