--- a/css/header.css
+++ b/css/header.css
@@ -2,12 +2,16 @@
     background-color: var(--primary2);
 
     margin: -1.5rem;
-    margin-block-end: 0;
+    -webkit-margin-after: 0;
+            margin-block-end: 0;
 
     padding: 1.5rem;
-    padding-block-start: 1rem;
+    -webkit-padding-before: 1rem;
+            padding-block-start: 1rem;
 
-    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1.5rem), 70% calc(100% - 1.5rem), 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1.5rem), 70% calc(100% - 1.5rem), 0 100%);
+
+            clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1.5rem), 70% calc(100% - 1.5rem), 0 100%);
 
     display: flex;
     align-items: center;
@@ -15,12 +19,14 @@
 }
 
 .header-shadow {
-    filter: drop-shadow(0 .25rem 0 black);
+    -webkit-filter: drop-shadow(0 .25rem 0 black);
+            filter: drop-shadow(0 .25rem 0 black);
 }
 
 .header .light {
     border-radius: 100%;
     block-size: 0.5rem;
     inline-size: 0.5rem;
-    margin-inline-end: 0.5rem;
+    -webkit-margin-end: 0.5rem;
+            margin-inline-end: 0.5rem;
 }
