--- a/css/screen.css
+++ b/css/screen.css
@@ -1,9 +1,11 @@
 .frame {
     background-color: var(--white);
     padding: 1.5rem;
-    padding-block-end: 0rem;
+    -webkit-padding-after: 0rem;
+            padding-block-end: 0rem;
     border-radius: 0.5rem;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 2rem 100%, 0 calc(100% - 2.75rem));
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 2rem 100%, 0 calc(100% - 2.75rem));
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 2rem 100%, 0 calc(100% - 2.75rem));
 }
 
 .glass {
@@ -57,6 +59,8 @@
     width: 1.57rem;
     height: 0.875rem;
     padding: 1rem;
-    padding-inline-start: 7.125rem;
-    padding-inline-end: 0;
+    -webkit-padding-start: 7.125rem;
+            padding-inline-start: 7.125rem;
+    -webkit-padding-end: 0;
+            padding-inline-end: 0;
 }
